--- a/学生科技文体竞赛系统/竞赛学生系统/竞赛学生系统.csproj
+++ b/学生科技文体竞赛系统/竞赛学生系统/竞赛学生系统.csproj
@@ -246,8 +246,8 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\Login\test.cshtml" />
     <Content Include="Views\Login\Register.cshtml" />
+    <Content Include="Views\Login\index_i.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
