--- a/学生科技文体竞赛系统/竞赛老师系统/竞赛老师系统.csproj
+++ b/学生科技文体竞赛系统/竞赛老师系统/竞赛老师系统.csproj
@@ -156,6 +156,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Home\Controllers\homeController.cs" />
     <Compile Include="Areas\Home\HomeAreaRegistration.cs" />
+    <Compile Include="Areas\Release\Controllers\releaseController.cs" />
+    <Compile Include="Areas\Release\ReleaseAreaRegistration.cs" />
+    <Compile Include="Areas\TeacherInfo\Controllers\TeacherInfoController.cs" />
+    <Compile Include="Areas\TeacherInfo\TeacherInfoAreaRegistration.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -286,6 +290,38 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\1.png" />
+    <Content Include="img\a1.jpg" />
+    <Content Include="img\a2.jpg" />
+    <Content Include="img\a3.jpg" />
+    <Content Include="img\a4.jpg" />
+    <Content Include="img\a5.jpg" />
+    <Content Include="img\a6.jpg" />
+    <Content Include="img\a7.jpg" />
+    <Content Include="img\a8.jpg" />
+    <Content Include="img\a9.jpg" />
+    <Content Include="img\bg.png" />
+    <Content Include="img\browser.png" />
+    <Content Include="img\iconfont-logo.png" />
+    <Content Include="img\icons.png" />
+    <Content Include="img\loading-upload.gif" />
+    <Content Include="img\locked.png" />
+    <Content Include="img\login-background.jpg" />
+    <Content Include="img\p1.jpg" />
+    <Content Include="img\p2.jpg" />
+    <Content Include="img\p3.jpg" />
+    <Content Include="img\profile.jpg" />
+    <Content Include="img\profile_big.jpg" />
+    <Content Include="img\profile_small.jpg" />
+    <Content Include="img\progress.png" />
+    <Content Include="img\p_big1.jpg" />
+    <Content Include="img\p_big2.jpg" />
+    <Content Include="img\p_big3.jpg" />
+    <Content Include="img\sprite-skin-flat.png" />
+    <Content Include="img\success.png" />
+    <Content Include="img\user.png" />
+    <Content Include="img\webuploader.png" />
+    <Content Include="img\wenku_logo.png" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
@@ -319,6 +355,15 @@
     <Content Include="Scripts\demo\bootstrap_table_test2.json" />
     <Content Include="Scripts\demo\photos.json" />
     <Content Include="Scripts\demo\table_base.json" />
+    <Content Include="Areas\Release\Views\web.config" />
+    <Content Include="Areas\Release\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Release\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Release\Views\release\Index.cshtml" />
+    <Content Include="img\browser.psd" />
+    <Content Include="Areas\TeacherInfo\Views\web.config" />
+    <Content Include="Areas\TeacherInfo\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\TeacherInfo\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\TeacherInfo\Views\TeacherInfo\Index.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\content.js" />
     <Content Include="Scripts\demo\bootstrap-table-demo.js" />
@@ -345,6 +390,8 @@
     <Content Include="Scripts\jquery-ui-1.10.4.min.js" />
     <Content Include="Scripts\jquery-ui.custom.min.js" />
     <Content Include="Scripts\jquery.min.js" />
+    <Content Include="Scripts\jquery.steps.js" />
+    <Content Include="Scripts\jquery.steps.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -718,6 +765,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Home\Models\" />
+    <Folder Include="Areas\Release\Models\" />
+    <Folder Include="Areas\TeacherInfo\Models\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
